--- a/twitch-api/Gemfile
+++ b/twitch-api/Gemfile
@@ -1,4 +1,5 @@
 # frozen_string_literal: true
-source "https://rubygems.org"
 
-gem 'httparty' , '~> 0.14.0'
+source 'https://rubygems.org'
+
+gem 'httparty', '~> 0.14.0'
